@@ -1,3 +1,7 @@
+FBINTF Change Log  version          (1.3-3 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100
+
+1. Fix compile error with fpc trunk. Type change to tzname.
+
 FBINTF Change Log  version          (1.3-2 Build 12889) Sun, 24 Oct 2021 13:49:28 +0100
 
 1. TFBClientAPI.GetProcAddr. Add check for nil reference.
